# super-dev-tcc-api

./: .env.example  .gitignore  Dockerfile  db_seed.sql  docker-compose.yaml  pyproject.toml  requirements.txt
src/super_api/: app.py  dependencias.py  main.py
src/super_api/api/v1/: cartao_controller.py  hospedagem_controller.py  user_controller.py
src/super_api/auth/: auth.py  usuario_service.py
src/super_api/database/: banco_dados.py  modelos.py  teste.py
src/super_api/schemas/: cartao_schema.py  endereco_schema.py  hospedagem_schema.py  user_schema.py
