[project]
name = "super-dev-tcc-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Thomas Johannes David Weidner",email = "thomas.jdweidner@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "super_dev_tcc_api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
